[package]
name = "lps"
version = "0.1.0"
edition = "2021"
description = "A local publish-subscribe pattern implementation"
authors = ["Alexander Vedekhin"]
repository = "https://github.com/alexanderved/lps"
keywords = ["pub-sub", "publish-subscribe", "message", "message_broker"]
license = "MPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
